--- a/cape_hatteras.html
+++ b/cape_hatteras.html
@@ -27,7 +27,7 @@
   <div id="map"></div>
   <script>
       var map = L.map('map').setView([33.56556083714035, -85.56680824927378], 14.0);
-      L.tileLayer('file:////Users/gabrielamartinez/Downloads/GEOG%20370/Github/Cape%20Hatteras/{z}/{x}/{y}.png', {
+      L.tileLayer('./{z}/{x}/{y}.png', {
         minZoom: 12,
         maxZoom: 16,
         tms: false,
