--- a/Homework 7.htm
+++ b/Homework 7.htm
@@ -8,7 +8,7 @@
 <body>
 <h1>Homework 7: Census Data Choropleth </h1>
 <h2>Gabriela Martinez</h2>
-<h3>This map depicts data on the enrollment of individuals in college or graduate school. </h3>
+<h3>This map depicts data on the enrollment of individuals in college or graduate school. The advancement to higher education after high school is still relatively low relative to the population. The biggest concentrations of individuals enrolled in colleges occur in counties with major state universities.</h3>
 <!-- Your map goes here -->
 <a href="./HW 7/WV College Enrollment Map.png">
     <img src="./HW 7/WV College Enrollment Map.png" alt="your map" width="500px">
@@ -16,11 +16,11 @@
 
 <!-- Link to your shapefile in Github and you CSV -->
 <h2>Data used for this project</h2>
-    <a href="https://gisunc.github.io/GEOG370Fall2020/other/yourdata.csv"> CSV dataset </a>
+    <a href="https://gjmart.github.io/GEOG370HW2/HW%207/ACSST5Y2018.S1401_2020-09-18T194616/nc_data.csv"> CSV dataset </a>
     <p></p>
-    <a href="https://gisunc.github.io/GEOG370Fall2020/other/yourdata/shapefile"> Link to shapefile </a>
+    <a href="https://gjmart.github.io/GEOG370HW2/HW%207/tl_2019_us_county/wv_counties_geo.geojson"> Link to shapefile </a>
 
 
 <div id="weava-permanent-marker" date="1600487309977"></div><div id="weava-ui-wrapper"><div class="weava-drop-area-wrapper"><div class="weava-drop-area"></div>
-<div class="weava-drop-area-text">Drop here!</div>
+<div class="weava-drop-area-text"></div>
 </div></div></body></html>
